paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/gcc_c11_tests/c11-align-6/sample_001/target.compile.log
error[E0790]: cannot call associated function on trait without specifying the corresponding `impl` type
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/gcc_c11_tests/c11-align-6/sample_001/target.rs:15:20
   |
15 |                 v: Default::default(),
   |                    ^^^^^^^^^^^^^^^^^^ cannot call associated function of trait
...
25 |     check_align!(bool);
   |     ------------------ in this macro invocation
   |
   = note: this error originates in the macro `check_align` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use a fully-qualified path to a specific available implementation
   |
15 |                 v: </* self type */ as Default>::default(),
   |                    +++++++++++++++++++        +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0790`.